<!--
  ~ Copyright (C) 2016 Tielei Zhang (zhangtielei.com).
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">演示程序</string>

    <string name="action_settings">Settings</string>

    <string name="first_tab_name">首页</string>
    <string name="second_tab_name">消息</string>
    <string name="third_tab_name">我</string>

    <string name="comment_title">收到的评论</string>
    <string name="liked_title">收到的赞</string>
    <string name="sysmsg_title">系统消息</string>
    <string name="title_activity_comment">CommentActivity</string>

    <string name="title_activity_liked">LikedActivity</string>
    <string name="title_activity_sys_msg">SysMsgActivity</string>

    <string name="click_to_clear_badge_count">点击清除当前页面的数字</string>
    <string name="click_to_clear_badge_dot">点击清除当前页面的红点</string>
    <string name="badge_number_cleared">数字/红点已清除</string>

    <string name="demo_description">本演示程序为了模拟Badge Number(数字/红点)的处理, 后台每隔15秒随机生成一个Badge Number.</string>

</resources>
