<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Tielei Zhang (zhangtielei.com).
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/comment_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp">
        <Button
                android:id="@+id/comment_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:text="@string/comment_title"
                android:visibility="visible" />
        <TextView
                android:id="@+id/comment_badge_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/comment_button"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/badge_count_bg"
                android:gravity="center"
                android:text="99+"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="invisible" />
        <ImageView
                android:id="@+id/comment_badge_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/comment_button"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="-5dp"
                android:src="@drawable/badge_dot"
                android:visibility="invisible" />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/liked_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_button_container"
            android:layout_marginTop="10dp">
        <Button
                android:id="@+id/liked_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:text="@string/liked_title"
                android:visibility="visible" />
        <TextView
                android:id="@+id/liked_badge_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/liked_button"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/badge_count_bg"
                android:gravity="center"
                android:text="99+"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="invisible" />
        <ImageView
                android:id="@+id/liked_badge_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/liked_button"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="-5dp"
                android:src="@drawable/badge_dot"
                android:visibility="invisible" />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/sysmsg_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/liked_button_container"
            android:layout_marginTop="10dp">
        <Button
                android:id="@+id/sysmsg_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:text="@string/sysmsg_title"
                android:visibility="visible" />
        <TextView
                android:id="@+id/sysmsg_badge_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/sysmsg_button"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/badge_count_bg"
                android:gravity="center"
                android:text="99+"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="invisible" />
        <ImageView
                android:id="@+id/sysmsg_badge_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/sysmsg_button"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="-5dp"
                android:src="@drawable/badge_dot"
                android:visibility="invisible" />
    </RelativeLayout>


</RelativeLayout>